testData/org/elixir_lang/inspection/unresolvable_module_qualifier/elixir_prefixed_unresolved.ex
defmodule ElixirPrefixedUnresolvedTest do
  <error descr="Module 'Elixir.NonExistent' is not defined or aliased in this scope">Elixir.NonExistent</error>.changeset(%{})
end
